Frankbelford/uatv1ba/force-app/main/default/objects/Portal_Error_Log__c/Portal_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Portal Error Log</label>
    <nameField>
        <displayFormat>PEL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>