Frankbelford/uatv1ba/force-app/main/default/objects/Portal_Error_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Reported_By__r.Contact.AccountId, Reported_By__r.Contact.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>