Frankbelford/uatv1ba/force-app/main/default/objects/Portal_Error_Log__c/fields/Error_Date__c.field-meta.xml
<CustomField>
    <fullName>Error_Date__c</fullName>
    <label>Error Date</label>
    <type>DateTime</type>
</CustomField>