Frankbelford/uatv1ba/force-app/main/default/objects/Portal_Error_Log__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Portal_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>