Frankbelford/uatv1ba/force-app/main/default/objects/Portal_Error_Log__c/fields/Reported_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + Reported_By__r.ContactId, Reported_By__r.Contact.FirstName + &quot;&quot; + Reported_By__r.Contact.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported By - Contact</label>
    <type>Text</type>
</CustomField>