Frankbelford/uatv1ba/force-app/main/default/objects/Portal_Error_Log__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>Portal Error Logs</relationshipLabel>
    <relationshipName>Portal_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>